Migration zu jax-ws und Java17, nicht mehr benötigten Sourcecode entfernt
git-svn-id: https://complex-it.xp-dev.com/svn/clxProduct/Sync/clxProductSync/trunk@5598 9a8fb529-06f0-4ef7-967a-ea8f9ee993bd